Add first code to main.cpp and some fixes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,8 @@
         "string": "cpp",
         "cstdarg": "cpp",
         "cassert": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "codecvt": "cpp",
+        "memory": "cpp"
     }
 }
