--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required( VERSION 3.5 )
 project( competitions )
+if (APPLE)
+    set(CMAKE_C_COMPILER /usr/local/bin/gcc-9)
+    set(CMAKE_CXX_COMPILER /usr/local/bin/g++-9)
+endif (APPLE)
 string( TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE_LOWERCASE )
 set( CMAKE_CXX_STANDARD 14 )
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_HOME_DIRECTORY}/${BUILD_TYPE_LOWERCASE}/build" )
