--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ hackerrank/practice/language/c/proxy_gen.h
 hackerrank/practice/language/c/proxy_gen.c
 ipcs/proxy_gen.h
 ipcs/proxy_gen.cxx
+project_euler/proxy_gen.h
+project_euler/proxy_gen.cxx
 timus/proxy_gen.h
 timus/proxy_gen.cxx
 
