Add tests for project euler problems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,6 +221,16 @@ foreach( testfile_in ${HACKERRANK_LANGUAGE_C_TESTS} )
 	add_test( NAME ${testshortname} COMMAND hackerrank_c ${solution} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 endforeach( testfile_in ${HACKERRANK_LANGUAGE_C_TESTS} )
 
+file( GLOB_RECURSE PROJECT_EULER_TESTS RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/tests/project_euler/*.in" )
+list( SORT PROJECT_EULER_TESTS )
+foreach( testfile_in ${PROJECT_EULER_TESTS} )
+    string( REPLACE ".in" "" testfullname ${testfile_in} )
+    string( REPLACE ".in" ".out" testfile_out ${testfile_in} )
+    get_filename_component( testshortname ${testfullname} NAME )
+    get_filename_component( solution ${testshortname} NAME_WE )
+	add_test( NAME project_euler_${testshortname} COMMAND project_euler ${solution} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
+endforeach( testfile_in ${PROJECT_EULER_TESTS} )
+
 file( GLOB_RECURSE TIMUS_TESTS RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/tests/timus/*.in" )
 list( SORT TIMUS_TESTS )
 foreach( testfile_in ${TIMUS_TESTS} )
