Add primes_generation test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -249,3 +249,4 @@ add_test( NAME tester_interpolation COMMAND tester interpolation )
 add_test( NAME tester_mertens COMMAND tester mertens )
 add_test( NAME tester_minimum_spanning_tree COMMAND tester minimum_spanning_tree )
 add_test( NAME tester_modular_fft COMMAND tester modular_fft )
+add_test( NAME tester_primes_generation COMMAND tester primes_generation )
