--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -255,6 +255,7 @@ add_test( NAME tester_generating_function COMMAND tester generating_function )
 add_test( NAME tester_graph_distance_pc COMMAND tester graph_distance_positive_cost )
 add_test( NAME tester_heap COMMAND tester heap )
 add_test( NAME tester_interpolation COMMAND tester interpolation )
+add_test( NAME tester_long_mult COMMAND tester long_mult )
 add_test( NAME tester_mertens COMMAND tester mertens )
 add_test( NAME tester_mertens_compact COMMAND tester mertens_compact )
 add_test( NAME tester_minimum_spanning_tree COMMAND tester minimum_spanning_tree )
