--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,16 +8,16 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            // "program": "${workspaceFolder}/debug/build/google_code_jam",
+            "program": "${workspaceFolder}/debug/build/google_code_jam",
             // "program": "${workspaceFolder}/debug/build/hackerrank",
             // "program": "${workspaceFolder}/debug/build/icfppc_2019",
             // "program": "${workspaceFolder}/debug/build/project_euler",
-            "program": "${workspaceFolder}/debug/build/tester",
+            // "program": "${workspaceFolder}/debug/build/tester",
             "args": [
-                "binary_search_tree"
+                // "binary_search_tree"
                 // "minimum_spanning_tree"
                 // "subtrees_and_paths__lcte",
-                // "pen_testing"
+                "median_sort"
                 // "tests/google/code_jam/2019/r2/p3.in"
                 // "../tests/hackerrank/practice/data_structures/advanced/subtrees_and_paths.1.in"
                 // "-threads",
