Add LCA and TPM tests to makefile.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -254,8 +254,10 @@ add_test( NAME tester_graph_distance_pc COMMAND tester graph_distance_positive_c
 add_test( NAME tester_heap COMMAND tester heap )
 add_test( NAME tester_interpolation COMMAND tester interpolation )
 add_test( NAME tester_long_mult COMMAND tester long_mult )
+add_test( NAME tester_lowest_common_ancestor COMMAND tester lowest_common_ancestor )
 add_test( NAME tester_mertens COMMAND tester mertens )
 add_test( NAME tester_mertens_compact COMMAND tester mertens_compact )
 add_test( NAME tester_minimum_spanning_tree COMMAND tester minimum_spanning_tree )
 add_test( NAME tester_modular_fft COMMAND tester modular_fft )
 add_test( NAME tester_primes_generation COMMAND tester primes_generation )
+add_test( NAME tester_tree_path_maxima COMMAND tester tree_path_maxima )
