--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -260,4 +260,5 @@ add_test( NAME tester_mertens_compact COMMAND tester mertens_compact )
 add_test( NAME tester_minimum_spanning_tree COMMAND tester minimum_spanning_tree )
 add_test( NAME tester_modular_fft COMMAND tester modular_fft )
 add_test( NAME tester_primes_generation COMMAND tester primes_generation )
+add_test( NAME tester_range_minimum_query COMMAND tester range_minimum_query )
 add_test( NAME tester_tree_path_maxima COMMAND tester tree_path_maxima )
