--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,16 +16,16 @@
             "args": [
                 // "binary_search_tree"
                 // "minimum_spanning_tree"
-                // "subtrees_and_paths__lcte",
-                "median_sort"
+                // "palindromic_subsets__treap",
+                "p1"
                 // "tests/google/code_jam/2019/r2/p3.in"
-                // "../tests/hackerrank/practice/data_structures/advanced/subtrees_and_paths.1.in"
+                // "tests/hackerrank/practice/data_structures/advanced/palindromic_subsets.1.in"
                 // "-threads",
                 // "1"
                 // "695"
             ],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/debug/",
+            "cwd": "${workspaceFolder}/",
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
