--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,6 +265,7 @@ endforeach( testfile_in ${TIMUS_TESTS} )
 add_test( NAME tester_binary_search_tree COMMAND tester binary_search_tree )
 add_test( NAME tester_convergent COMMAND tester convergent )
 add_test( NAME tester_generating_function COMMAND tester generating_function )
+add_test( NAME tester_graph_distance COMMAND tester graph_distance )
 add_test( NAME tester_graph_distance_pc COMMAND tester graph_distance_positive_cost )
 add_test( NAME tester_heap COMMAND tester heap )
 add_test( NAME tester_interpolation COMMAND tester interpolation )
