--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -268,7 +268,7 @@ add_test( NAME tester_generating_function COMMAND tester generating_function )
 add_test( NAME tester_graph_distance COMMAND tester graph_distance )
 add_test( NAME tester_graph_distance_u COMMAND tester graph_distance_unsigned )
 add_test( NAME tester_graph_distance_pc COMMAND tester graph_distance_positive_cost )
-add_test( NAME tester_heap COMMAND tester heap )
+add_test( NAME tester_heap_base COMMAND tester heap_base )
 add_test( NAME tester_interpolation COMMAND tester interpolation )
 add_test( NAME tester_long_mult COMMAND tester long_mult )
 add_test( NAME tester_lowest_common_ancestor COMMAND tester lowest_common_ancestor )
