--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required( VERSION 3.5 )
 project( competitions )
 if (APPLE)
-    set(CMAKE_C_COMPILER /usr/local/bin/gcc-9)
-    set(CMAKE_CXX_COMPILER /usr/local/bin/g++-9)
+    set(CMAKE_C_COMPILER /opt/homebrew/bin/gcc-11)
+    set(CMAKE_CXX_COMPILER /opt/homebrew/bin/g++-11)
 endif (APPLE)
 string( TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE_LOWERCASE )
 set( CMAKE_CXX_STANDARD 14 )
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_HOME_DIRECTORY}/${BUILD_TYPE_LOWERCASE}/build" )
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra -Warray-bounds=0 -Werror=stringop-overflow=0")
 include_directories( PRIVATE "${PROJECT_SOURCE_DIR}" )
 find_package( Threads )
 
