Check for .out file for google codejam tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,15 +185,15 @@ foreach( testfile_out ${ADVENT_OF_CODE_TESTS} )
 	add_test( NAME "aoc.${testshortname}" COMMAND advent_of_code ${solution} "advent_of_code/20${year}/input/${testshortname}.txt" ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 endforeach( testfile_out ${ADVENT_OF_CODE_TESTS} )
 
-file( GLOB_RECURSE GOOGLE_CODE_JAM_TESTS RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/tests/google/code_jam/*.in" )
+file( GLOB_RECURSE GOOGLE_CODE_JAM_TESTS RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/tests/google/code_jam/*.out" )
 list( SORT GOOGLE_CODE_JAM_TESTS )
-foreach( testfile_in ${GOOGLE_CODE_JAM_TESTS} )
-    string( REPLACE ".in" "" testfullname ${testfile_in} )
-    string( REPLACE ".in" ".out" testfile_out ${testfile_in} )
+foreach( testfile_out ${GOOGLE_CODE_JAM_TESTS} )
+    string( REPLACE ".out" "" testfullname ${testfile_out} )
+    string( REPLACE ".out" ".in" testfile_in ${testfile_out} )
     get_filename_component( testshortname ${testfullname} NAME )
     get_filename_component( solution ${testshortname} NAME_WE )
 	add_test( NAME ${testshortname} COMMAND google_code_jam ${solution} ${testfile_in} ${testfile_out} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
-endforeach( testfile_in ${GOOGLE_CODE_JAM_TESTS} )
+endforeach( testfile_out ${GOOGLE_CODE_JAM_TESTS} )
 
 add_test( NAME number_guessing COMMAND python3 tests/google/code_jam/2018/ps/number_guessing.py ./release/build/google_code_jam number_guessing WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 add_test( NAME go_gopher COMMAND python3 tests/google/code_jam/2018/qr/go_gopher.py ./release/build/google_code_jam go_gopher WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
