--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
-cmake_minimum_required( VERSION 3.5 )
+cmake_minimum_required( VERSION 3.12 )
+set(CMAKE_OSX_SYSROOT "/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk")
 project( competitions )
 if (APPLE)
-    set(CMAKE_C_COMPILER /opt/homebrew/bin/gcc-12)
-    set(CMAKE_CXX_COMPILER /opt/homebrew/bin/g++-12)
+    set(CMAKE_C_COMPILER /opt/homebrew/bin/gcc-13)
+    set(CMAKE_CXX_COMPILER /opt/homebrew/bin/g++-13)
 endif (APPLE)
 string( TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE_LOWERCASE )
-set( CMAKE_CXX_STANDARD 14 )
+set( CMAKE_CXX_STANDARD 20 )
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_HOME_DIRECTORY}/${BUILD_TYPE_LOWERCASE}/build" )
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra -Warray-bounds=0 -Werror=stringop-overflow=0")
 include_directories( PRIVATE "${PROJECT_SOURCE_DIR}" )
