--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ Testing/
 # Project auto generated files
 advent_of_code/proxy_gen.h
 advent_of_code/proxy_gen.cxx
+codeforces/proxy_gen.h
+codeforces/proxy_gen.cxx
 google/code_jam/proxy_gen.h
 google/code_jam/proxy_gen.cxx
 hackerrank/proxy_gen.h
