--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,15 @@ cmake_minimum_required( VERSION 3.12 )
 set(CMAKE_OSX_SYSROOT "/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk")
 project( competitions )
 if (APPLE)
-    set(CMAKE_C_COMPILER /opt/homebrew/bin/gcc-14)
-    set(CMAKE_CXX_COMPILER /opt/homebrew/bin/g++-14)
+    # set(CMAKE_C_COMPILER /opt/homebrew/bin/gcc-14)
+    # set(CMAKE_CXX_COMPILER /opt/homebrew/bin/g++-14)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra")
+else (APPLE)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra -Warray-bounds=0 -Werror=stringop-overflow=0")
 endif (APPLE)
 string( TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE_LOWERCASE )
 set( CMAKE_CXX_STANDARD 20 )
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_HOME_DIRECTORY}/${BUILD_TYPE_LOWERCASE}/build" )
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra -Warray-bounds=0 -Werror=stringop-overflow=0")
 include_directories( PRIVATE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/../competitions/" )
 find_package( Threads )
 
@@ -251,7 +253,7 @@ endforeach( testfile_out ${GOOGLE_CODE_JAM_TESTS} )
 add_test( NAME number_guessing COMMAND python3 tests/google/code_jam/2018/ps/number_guessing.py ./release/build/google_code_jam number_guessing WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 add_test( NAME go_gopher COMMAND python3 tests/google/code_jam/2018/qr/go_gopher.py ./release/build/google_code_jam go_gopher WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 add_test( NAME lollipop_shop COMMAND python3 tests/google/code_jam/2018/r1c/lollipop_shop.py ./release/build/google_code_jam lollipop_shop WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
-add_test( NAME name_preserving_network COMMAND python3 tests/google/code_jam/2018/r3/name_preserving_network.py ./release/build/google_code_jam name_preserving_network WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
+# add_test( NAME name_preserving_network COMMAND python3 tests/google/code_jam/2018/r3/name_preserving_network.py ./release/build/google_code_jam name_preserving_network WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 add_test( NAME go_gophers COMMAND python3 tests/google/code_jam/2018/wf/go_gophers.py ./release/build/google_code_jam go_gophers WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 # add_test( NAME dat_bae.0 COMMAND python3 tests/google/code_jam/2019/interactive_runner.py python3 tests/google/code_jam/2019/qr/dat_bae.py 0 -- ./release/build/google_code_jam dat_bae WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
 add_test( NAME dat_bae.1 COMMAND python3 tests/google/code_jam/2019/interactive_runner.py python3 tests/google/code_jam/2019/qr/dat_bae.py 1 -- ./release/build/google_code_jam dat_bae WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} )
